Further fix to conflict between map and nice_menu z-index.

--- a/drupal/themes/trunk/instant_indicia/sass/instant_indicia.scss
+++ b/drupal/themes/trunk/instant_indicia/sass/instant_indicia.scss
@@ -53,6 +53,7 @@ h2 {
 #map {
   /* Fixes a problem with map z-index preventing clicks getting to overlaid menus */
   position: relative;
+  z-index: 0;
 }
 
 .report-map {
